src/test/groovy/org/fundacionjala/gradle/plugins/enforce/tasks/salesforce/resources/objects/Object1__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>Field3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Object1</label>
    <nameField>
        <label>Object1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object1</pluralLabel>
        <recordTypes>
        <fullName>recordType1</fullName>
        <active>true</active>
        <label>recordType1</label>
    </recordTypes>
    <recordTypes>
        <fullName>recordType2</fullName>
        <active>true</active>
        <label>recordType2</label>
    </recordTypes>
    <recordTypes>
        <fullName>recordType3</fullName>
        <active>true</active>
        <label>recordType3</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validation1</fullName>
        <active>true</active>
        <errorConditionFormula>Field1__c  = &quot;something&quot;</errorConditionFormula>
        <errorMessage>Error validation 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation2</fullName>
        <active>true</active>
        <errorConditionFormula>Field2__c  = &quot;something&quot;</errorConditionFormula>
        <errorMessage>Error validation 2</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation3</fullName>
        <active>true</active>
        <errorConditionFormula>Field3__c  = &quot;something&quot;</errorConditionFormula>
        <errorMessage>Error validation 3</errorMessage>
    </validationRules>
</CustomObject>